# leadhit_test_task

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  asgi.py  pyproject.toml
scripts/: fixture_forms.py
src/: app.py  config.py  database.py
src/api/: form.py  urls.py
src/enums/: collections.py  type_field.py
src/utils/: without_errors.py
tests/: conftest.py  pytest.ini
tests/fixtures/: form.py
tests/test_src/test_api/: test_form.py
